--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
@@ -12,6 +13,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -25,7 +28,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 //    sourceSets{
 //        main{
 //            jniLibs.srcDirs = ['libs']
@@ -42,6 +48,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.bigkoo:convenientbanner:2.1.5'
     implementation 'androidx.recyclerview:recyclerview:1.0.0+'
-    compile files('libs/mysql-connector-java-8.0.19.jar')
-    compile files('libs/AMap3DMap_7.7.0_AMapNavi_7.7.0_AMapSearch_7.7.0_20201102.jar')
+    compile files('libs/mysql-connector-java-8.0.19.jar')    //添加Mysql数据库的依赖
+    compile files('libs/AMap3DMap_7.7.0_AMapNavi_7.7.0_AMapSearch_7.7.0_20201102.jar')   //添加高德地图的依赖
+    //Bmob依赖
+    implementation 'cn.bmob.android:bmob-sdk:3.7.8'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
+    implementation 'com.squareup.okio:okio:2.2.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
 }
