--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.trip_to_jiujiang">
+          xmlns:tools="http://schemas.android.com/tools" package="com.example.trip_to_jiujiang">
     <!--允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!--获取GSM（2g）、WCDMA（联通3g）等网络状态的信息  -->
@@ -15,37 +15,40 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <!--    <添加权限高德地图>-->
+    <!--用于进行网络定位-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
     <!--用于访问GPS定位-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <!--获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <!--用于获取运营商信息，用于支持提供运营商信息相关的接口-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <!--这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <!--用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
     <!--用于访问网络，网络定位需要上网-->
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <!--用于读取手机当前的状态-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-    <!--写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据-->
+    <!--用于写入缓存数据到扩展存储卡-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <!--用于申请调用A-GPS模块-->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
-    <!--用于申请获取蓝牙信息进行室内定位-->
-    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
-
-    <!--打电话权限-->
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
-
+    <!-- if you want to load images from the internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+            android:largeHeap="true"
+            android:hardwareAccelerated="false"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/theme"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/theme"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <!--        <启动高德地图服务>-->
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="080a0ea977bb599fc0b3f5979990e704"></meta-data>
+        <!--启动高德地图定位功能-->
+        <service android:name="com.amap.api.location.APSService"/>
+        <!--Bmob后端云-->
         <provider
                 android:name="cn.bmob.v3.util.BmobContentProvider"
                 android:authorities="com.example.trip_to_jiujiang.BmobContentProvider">
@@ -60,7 +63,12 @@
         <activity android:name=".Activity.SignUpActivity"></activity>
         <activity android:name=".Activity.SignInActivity"></activity>
         <activity android:name=".Activity.IndexActivity"></activity>
-<!--        <启动高德地图服务>-->
-     <meta-data android:name="浔阳游-导航端" android:value="080a0ea977bb599fc0b3f5979990e704"></meta-data>
+        <activity android:name=".Fragment.TransportActivity"></activity>
+        <activity android:name=".Fragment.TicketsOrderActivity"></activity>
+        <activity android:name=".Fragment.BeautifulLuXianActivity"></activity>
+        <activity android:name=".Fragment.BeautifulBinnerActivity"/>
+        <activity android:name=".Fragment.TicketsItemListen"/>
+
     </application>
+
 </manifest>
