--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.example.trip_to_jiujiang">
     <!--允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,37 +16,38 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <!--    <添加权限高德地图>-->
+    <!--允许程序打开网络套接字-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--允许程序设置内置sd卡的写权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--允许程序获取网络状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--允许程序访问WiFi网络信息-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--允许程序读写手机状态和身份-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--用于进行网络定位-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
     <!--用于访问GPS定位-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <!--获取运营商信息，用于支持提供运营商信息相关的接口-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <!--这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <!--用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-    <!--用于访问网络，网络定位需要上网-->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <!--用于读取手机当前的状态-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-    <!--写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <!--用于申请调用A-GPS模块-->
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
-    <!--用于申请获取蓝牙信息进行室内定位-->
-    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
-
-    <!--打电话权限-->
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
-
-    <application
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission><application
+            android:largeHeap="true"
+            android:hardwareAccelerated="false"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/theme"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/theme"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <!--        <启动高德地图服务>-->
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="080a0ea977bb599fc0b3f5979990e704"></meta-data>
+
+        <!--Bmob后端云-->
         <provider
                 android:name="cn.bmob.v3.util.BmobContentProvider"
                 android:authorities="com.example.trip_to_jiujiang.BmobContentProvider">
@@ -60,7 +62,26 @@
         <activity android:name=".Activity.SignUpActivity"></activity>
         <activity android:name=".Activity.SignInActivity"></activity>
         <activity android:name=".Activity.IndexActivity"></activity>
-<!--        <启动高德地图服务>-->
-     <meta-data android:name="浔阳游-导航端" android:value="080a0ea977bb599fc0b3f5979990e704"></meta-data>
+        <activity android:name=".Activity.TestActivity"></activity>
+        <activity android:name=".Activity.MyOrderActivity"></activity>
+        <activity android:name=".Activity.MySpecialtyActivity"></activity>
+        <activity android:name=".Activity.MyTicketsActivity"></activity>
+        <activity android:name=".Activity.MyHotelActivity"></activity>
+        <activity android:name=".Activity.MyParkingActivity"></activity>
+        <activity android:name=".Activity.ChangePasswordActivity"></activity>
+        <activity android:name=".Activity.InterestXunYangActivity"></activity>
+    <activity android:name=".Activity.TaoYuanMingActivity"></activity>
+    <activity android:name=".Activity.XunYangLouActivity"></activity>
+    <activity android:name=".Activity.TimeMoneyActivity"></activity>
+    <activity android:name=".Activity.HuXiXiaoTanActivity"></activity>
+    <activity android:name=".Activity.DongLinSiActivity"></activity>
+    <activity android:name=".Activity.XunYangGongLieActivity"></activity>
+    <activity android:name=".Activity.GongLieLuShanActivity"></activity>
+    <activity android:name=".Activity.GongLieBaiMuDaActivity"></activity>
+    <activity android:name=".Activity.GongLieDongLinSiActivity"></activity>
+    <activity android:name=".Activity.GongLieShiZhongShanActivity"></activity>
+    <activity android:name=".Activity.GongLieXunYangLouActivity"></activity>
+    <!--服务必须有！否则定位时候报错误，错误代码10-->
+    <service android:name="com.amap.api.location.APSService"></service>
     </application>
 </manifest>
